Added API key registration link

--- a/example.html
+++ b/example.html
@@ -78,7 +78,7 @@ $(document).ready(function(){
 	
 	<h2>Parameters</h2>
 	
-	<p><b>apiKey</b> - your tumblr API key that you need to register</p>
+	<p><b>apiKey</b> - your tumblr API key that you need to <a href="http://www.tumblr.com/oauth/apps">register</a></p>
 	
 	<p><b>tumblrSite</b> - link to your tumblr site e.g. mariodian.tumblr.com</p>
 	
